--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,23 @@
         tools:layout_editor_absoluteX="64dp"
         tools:layout_editor_absoluteY="318dp" />
 
+        <Button
+            android:id="@+id/ganapganjil"
+            android:layout_width="298dp"
+            android:layout_height="56dp"
+            android:text="@string/MainActivity_bilangan_genap_dan_ganjil"
+            android:onClick="bilangangenapdanganil"
+            tools:layout_editor_absoluteX="64dp"
+            tools:layout_editor_absoluteY="318dp" />
+
+        <Button
+            android:id="@+id/listview"
+            android:layout_width="298dp"
+            android:layout_height="56dp"
+            android:text="Lisview"
+            android:onClick="Listview"
+            tools:layout_editor_absoluteX="64dp"
+            tools:layout_editor_absoluteY="318dp" />
     </LinearLayout>
 
 </LinearLayout>
