--- a/app/src/main/res/layout/activity_bilangan_genap_dan_ganjil.xml
+++ b/app/src/main/res/layout/activity_bilangan_genap_dan_ganjil.xml
@@ -1,14 +1,18 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.galih.amikom.praktek1.BilanganGenapdanGanjil" >
+    android:orientation="vertical"
+    android:padding="6dp"
+    android:gravity="center"
+    tools:context="com.galih.amikom.praktek1.BilanganGenapdanGanjil">
 
-    <TextView
+
+
+
+<TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,38 +24,51 @@
         android:textStyle="bold"
         android:text="@string/genap_atau_ganjil" />
 
+
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/eT_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
+        android:layout_alignStart="@+id/eT_input"
+        android:layout_below="@+id/button_Ok"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="38dp"
         android:ems="10"
-        android:hint="@string/masukan_angka">
+        android:hint="@string/masukan_angka"
+        android:inputType="number" >
 
         <requestFocus />
     </EditText>
+
+
+    <Button
+        android:id="@+id/button_Ok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/eT_input"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="31dp"
+        android:gravity="center"
+        android:text="@string/tentukan" />
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText1"
-        android:layout_alignLeft="@+id/editText1"
-        android:layout_marginLeft="1dp"
-        android:layout_marginTop="24dp"
+        android:layout_alignStart="@+id/eT_input"
+        android:layout_below="@+id/button_Ok"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="38dp"
         android:ems="10"
-        android:hint="@string/Output" />
+        android:hint="@string/Output"
+        android:inputType="number" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:gravity="center"
-        android:text="@string/tentukan" />
+    <ListView
+        android:layout_gravity="bottom"
+        android:id="@+id/mLv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-</RelativeLayout>
+    </ListView>
+
+</LinearLayout>
